fix(sidepanel): use z-index token

--- a/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
+++ b/packages/ibm-products-web-components/src/components/side-panel/side-panel.scss
@@ -16,6 +16,7 @@ $css--plex: true !default;
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/utilities/ai-gradient' as *;
 @use '@carbon/styles/scss/utilities/convert' as *;
+@use '@carbon/styles/scss/utilities' as *;
 @use '@carbon/styles/scss/config' as carbon-config;
 
 $prefix: 'c4p';
@@ -336,7 +337,7 @@ $block-class-action-set: #{$prefix}--action-set;
 
   .#{$block-class}__resizer {
     position: absolute;
-    z-index: 8000;
+    z-index: z('modal');
     inset-block-end: 0;
     inset-block-start: 0;
     --resizer-thickness: 4px;
